--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.5.1",
+    "next": "13.5.5",
     "react": "^18",
     "react-dom": "^18",
-    "next": "13.5.5"
+    "sweetalert2": "^11.7.32",
+    "swr": "^2.2.4"
   },
   "devDependencies": {
     "typescript": "^5",
